--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>include html file</h1>
-    <h2>Hello feature 1 adding</h2>
+    <h2>Hello feature 1 adding(button)</h2>
 
 </body>
 </html>
